# tox-no-deps

./: .gitignore  MANIFEST.in  README.md  pylintrc  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pipelines.yml
src/tox_no_deps/: plugin.py
tests/: conftest.py  test_plugin.py
tests/integration/: test_tox_no_deps_int.py
tests/unit/: test_tox_no_deps.py  test_version.py
