[build-system]
requires = [
    "setuptools >= 42.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-ra --showlocals"
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = [
    "tox_no_deps",
]

[tool.coverage.report]
skip_covered = false
show_missing = true

[tool.coverage.paths]
source = [
    "src/tox_no_deps",
    "*/.tox/*/lib/python*/site-packages/tox_no_deps",
    "*/src/tox_no_deps",
]

[tool.pylint."master"]
recursive = true
suggestion-mode = "yes"
persistent="no"
ignore-paths = [
    '.*/\.git/.*',
    '.*/\.tox/.*',
]

[tool.pylint."messages control"]
enable = [
    "all",
    "useless-suppression",
]

disable = [
    "bad-inline-option",
    "c-extension-no-member",
    "deprecated-pragma",
    "file-ignored",
    "locally-disabled",
    "raw-checker-failed",
    "suppressed-message",
    "use-symbolic-message-instead",
    "bad-indentation",
    "broad-except",
    "dangerous-default-value",
    "duplicate-code",
    "fixme",
    "invalid-name",
    "line-too-long",
    "missing-docstring",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "redefined-outer-name",
    "super-init-not-called",
    "superfluous-parens",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "trailing-newlines",
    "trailing-whitespace",
    "ungrouped-imports",
    "unused-argument",
    "wrong-import-order",
    "wrong-import-position",
    "consider-using-with",  # pylint 2.8.0, contextmanager is not mandatory
    "consider-using-max-builtin",  # pylint 2.8.0, code can be more readable
    "consider-using-min-builtin",  # pylint 2.8.0, code can be more readable
    "consider-using-f-string",  # pylint 2.11.0, format can be more readable
    "subprocess-run-check",  # subprocess result can be check later or ignored
]

[tool.pylint."reports"]
output-format = "colorized"
