[metadata]
name = tox-no-deps
version = attr: tox_no_deps.version.__version__
description = Skip the installation of all deps and extras of Tox environments
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = Stanislav Levin
author = Stanislav Levin
url = https://github.com/test/tox-no-deps
project_urls =
    Source=https://github.com/test/tox-no-deps
    Tracker=https://github.com/test/tox-no-deps/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: tox
    Intended Audience :: Developers
    'License :: OSI Approved :: MIT License',
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.6
install_requires =
    tox
    pluggy

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_no_deps=tox_no_deps.plugin

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

[bdist_wheel]
universal = 1
